# Cpp-Labs

./: README.md
A_Banking_system?/: Bank.cpp  Bank.hpp  CMakeLists.txt  PROBLEM.md  main.cpp
A_duel_lol/: CMakeLists.txt  Character.cpp  Character.hpp  PROBLEM.md  Sorcerer.cpp  Sorcerer.hpp  Warrior.cpp  Warrior.hpp  main.cpp
Digital Art Gallery/: Artwork.cpp  Artwork.hpp  CMakeLists.txt  Exhibition.cpp  Exhibition.hpp  Gallery.cpp  Gallery.hpp  PROBLEM.md  main.cpp
Network_Packet_Processing/: CMakeLists.txt  Packet.cpp  Packet.hpp  PacketType.hpp  Protocol.hpp  Status.hpp  main.cpp
Palette++/: CMakeLists.txt  Color.cpp  Color.hpp  ColorUtility.cpp  ColorUtility.hpp  PROBLEM.md  main.cpp
Restaurant_Reservation_Management_System/: CMakeLists.txt  Customer.cpp  Customer.hpp  PROBLEM.md  Restaurant.cpp  Restaurant.hpp  Table.cpp  Table.hpp  main.cpp  removeElement.hpp
Robotics_Control_System/: CMakeLists.txt  DeliveryRobot.cpp  DeliveryRobot.hpp  Exceptions.cpp  Exceptions.hpp  MaintenanceRobot.cpp  MaintenanceRobot.hpp  PROBLEM.md  Robot.hpp  RobotControlCenter.cpp  RobotControlCenter.hpp  main.cpp
Some_Robotics_Template/: CMakeLists.txt  DataHolder.hpp  PROBLEM.md  functions.hpp  main.cpp
